--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevQuest - Gamified Task Manager</title>
+    <title>DevQuest Task Manager </title>
     <meta name="description" content="A gamified task manager for developers with XP, levels, and streaks" />
     <meta name="author" content="DevQuest" />
 
